--- a/MovieList/View/Base.lproj/Main.storyboard
+++ b/MovieList/View/Base.lproj/Main.storyboard
@@ -19,21 +19,19 @@
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="NAn-Zc-4r4" userLabel="DescriptionView">
                                 <rect key="frame" x="0.0" y="44" width="414" height="130"/>
                                 <subviews>
-                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="Title" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="ocX-VU-vOf">
+                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="ocX-VU-vOf">
                                         <rect key="frame" x="10" y="0.0" width="394" height="35"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="35" id="bet-kd-GNd"/>
                                         </constraints>
-                                        <color key="textColor" systemColor="opaqueSeparatorColor"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                         <textInputTraits key="textInputTraits"/>
                                     </textField>
-                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="Year" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="oyv-1N-6je">
+                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="oyv-1N-6je">
                                         <rect key="frame" x="10" y="45" width="394" height="35"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="35" id="Aja-jT-ESA"/>
                                         </constraints>
-                                        <color key="textColor" systemColor="opaqueSeparatorColor"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                         <textInputTraits key="textInputTraits"/>
                                     </textField>
@@ -44,9 +42,11 @@
                                         </constraints>
                                         <state key="normal" title="Button"/>
                                         <buttonConfiguration key="configuration" style="filled" title="Add"/>
+                                        <connections>
+                                            <action selector="addPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="SAq-Ub-vZN"/>
+                                        </connections>
                                     </button>
                                 </subviews>
-                                <color key="backgroundColor" systemColor="systemGreenColor"/>
                                 <constraints>
                                     <constraint firstItem="oyv-1N-6je" firstAttribute="top" secondItem="ocX-VU-vOf" secondAttribute="bottom" constant="10" id="7JB-5P-RLv"/>
                                     <constraint firstAttribute="trailing" secondItem="Q9J-9y-vUJ" secondAttribute="trailing" constant="182" id="DzL-w1-LXt"/>
@@ -55,20 +55,43 @@
                                     <constraint firstAttribute="trailing" secondItem="oyv-1N-6je" secondAttribute="trailing" constant="10" id="Prh-kU-FIB"/>
                                     <constraint firstAttribute="height" constant="130" id="dgA-sP-iyT"/>
                                     <constraint firstItem="ocX-VU-vOf" firstAttribute="leading" secondItem="NAn-Zc-4r4" secondAttribute="leading" constant="10" id="k9k-ac-B4m"/>
-                                    <constraint firstItem="Q9J-9y-vUJ" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="NAn-Zc-4r4" secondAttribute="leading" symbolic="YES" id="oRY-yd-2HG"/>
+                                    <constraint firstItem="Q9J-9y-vUJ" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="NAn-Zc-4r4" secondAttribute="leading" constant="20" symbolic="YES" id="oRY-yd-2HG"/>
                                     <constraint firstItem="oyv-1N-6je" firstAttribute="leading" secondItem="NAn-Zc-4r4" secondAttribute="leading" constant="10" id="w3B-cM-xTZ"/>
                                     <constraint firstItem="Q9J-9y-vUJ" firstAttribute="top" secondItem="oyv-1N-6je" secondAttribute="bottom" constant="10" id="y7t-Gd-MMH"/>
                                 </constraints>
                             </view>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="nxe-A7-xlz">
+                                <rect key="frame" x="10" y="174" width="394" height="688"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="ReusableCell" id="UMQ-kq-Y3g">
+                                        <rect key="frame" x="0.0" y="44.5" width="394" height="43.5"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="UMQ-kq-Y3g" id="8Mr-cH-FiE">
+                                            <rect key="frame" x="0.0" y="0.0" width="394" height="43.5"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
+                                </prototypes>
+                            </tableView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
+                            <constraint firstItem="nxe-A7-xlz" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="10" id="Dtj-yv-FHb"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="nxe-A7-xlz" secondAttribute="trailing" constant="10" id="Eb4-fR-l2a"/>
                             <constraint firstItem="NAn-Zc-4r4" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="F38-ZN-9Hc"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="nxe-A7-xlz" secondAttribute="bottom" id="NBM-V4-JHS"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="NAn-Zc-4r4" secondAttribute="trailing" id="Qeb-BU-bSg"/>
+                            <constraint firstItem="nxe-A7-xlz" firstAttribute="top" secondItem="NAn-Zc-4r4" secondAttribute="bottom" id="mUE-Za-Rhb"/>
                             <constraint firstItem="NAn-Zc-4r4" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="xFx-NO-Cia"/>
                         </constraints>
                     </view>
+                    <connections>
+                        <outlet property="tableView" destination="nxe-A7-xlz" id="ZN9-1S-DTM"/>
+                        <outlet property="titleTextField" destination="ocX-VU-vOf" id="sq7-3D-zdg"/>
+                        <outlet property="yearTextField" destination="oyv-1N-6je" id="0b5-6Z-nsm"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
@@ -76,14 +99,8 @@
         </scene>
     </scenes>
     <resources>
-        <systemColor name="opaqueSeparatorColor">
-            <color red="0.77647058823529413" green="0.77647058823529413" blue="0.78431372549019607" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-        </systemColor>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-        </systemColor>
-        <systemColor name="systemGreenColor">
-            <color red="0.20392156862745098" green="0.7803921568627451" blue="0.34901960784313724" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
     </resources>
 </document>
