--- a/MovieList/View/Base.lproj/Main.storyboard
+++ b/MovieList/View/Base.lproj/Main.storyboard
@@ -25,7 +25,7 @@
                                             <constraint firstAttribute="height" constant="35" id="bet-kd-GNd"/>
                                         </constraints>
                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                        <textInputTraits key="textInputTraits"/>
+                                        <textInputTraits key="textInputTraits" autocorrectionType="no"/>
                                     </textField>
                                     <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="oyv-1N-6je">
                                         <rect key="frame" x="10" y="45" width="394" height="35"/>
@@ -33,7 +33,7 @@
                                             <constraint firstAttribute="height" constant="35" id="Aja-jT-ESA"/>
                                         </constraints>
                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                        <textInputTraits key="textInputTraits"/>
+                                        <textInputTraits key="textInputTraits" keyboardType="numberPad"/>
                                     </textField>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Q9J-9y-vUJ">
                                         <rect key="frame" x="182" y="90" width="50" height="31"/>
